--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
               <span class="text-lg font-bold text-white">Arufkuy Store</span>
             </a>
             <p class="text-slate-400 text-sm leading-relaxed max-w-sm">
-              Platform penyedia produk digital otomatis, cepat, dan terpercaya. Solusi terbaik untuk kebutuhan digital Anda.
+              Platform penyedia produk digital otomatis, cepat, dan terpercaya. Solusi terbaik untuk kebutuhan digital
+              Anda.
             </p>
           </div>
           <div>
@@ -1235,7 +1236,7 @@
       }
 
       return `
-        <a href="detail-product.html?id=${data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
+        <a href="${data.slug ? '/p/' + data.slug : 'detail-product.html?id=' + data.id}" class="block rounded-3xl border border-white/10 bg-white/5 p-5 hover:bg-white/10 transition-all duration-300 hover:border-white/20 hover:-translate-y-1 group">
           <div class="flex flex-col h-full">
             ${imgHtml}
             <div class="mb-2 flex justify-between items-start gap-2">
