--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 border-b border-white/10 bg-slate-950/70 backdrop-blur">
     <div class="mx-auto flex max-w-6xl items-center justify-between px-4 py-4">
-      <a href="index.html" class="flex items-center gap-3">
+      <a href="/" class="flex items-center gap-3">
         <div class="grid h-10 w-10 place-items-center rounded-xl bg-white/5 shadow-glow">
           <span class="text-lg font-bold text-indigo-300">A</span>
         </div>
@@ -61,10 +61,10 @@
       </a>
 
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
-        <a href="index.html#products" class="hover:text-white transition">Produk</a>
-        <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
-        <a href="help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
-        <a href="contact.html" class="hover:text-white transition">Kontak</a>
+        <a href="/#products" class="hover:text-white transition">Produk</a>
+        <a href="/order-guide.html" class="hover:text-white transition">Cara Order</a>
+        <a href="/help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
+        <a href="/contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -130,7 +130,7 @@
 
         <!-- Navigation Links -->
         <div class="space-y-1 mb-4">
-          <a href="index.html#products" onclick="closeMobileMenu()"
+          <a href="/#products" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -138,7 +138,7 @@
             </svg>
             Produk
           </a>
-          <a href="order-guide.html" onclick="closeMobileMenu()"
+          <a href="/order-guide.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -147,7 +147,7 @@
             </svg>
             Cara Order
           </a>
-          <a href="help-center.html" onclick="closeMobileMenu()"
+          <a href="/help-center.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -156,7 +156,7 @@
             </svg>
             Pusat Bantuan
           </a>
-          <a href="contact.html" onclick="closeMobileMenu()"
+          <a href="/contact.html" onclick="closeMobileMenu()"
             class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -228,7 +228,7 @@
 
       <!-- Breadcrumb -->
       <div class="mb-8 flex items-center gap-2 text-sm text-slate-400">
-        <a href="index.html" class="hover:text-white transition">Home</a>
+        <a href="/" class="hover:text-white transition">Home</a>
         <span>/</span>
         <span class="text-slate-200">Detail Product</span>
       </div>
@@ -362,7 +362,7 @@
     <div class="mx-auto max-w-6xl px-4">
       <div class="grid grid-cols-1 md:grid-cols-4 gap-12 mb-12">
         <div class="col-span-1 md:col-span-2">
-          <a href="index.html" class="flex items-center gap-3 mb-6">
+          <a href="/" class="flex items-center gap-3 mb-6">
             <div class="grid h-10 w-10 place-items-center rounded-xl bg-white/5 shadow-glow">
               <span class="text-lg font-bold text-indigo-300">A</span>
             </div>
@@ -376,19 +376,19 @@
         <div>
           <h4 class="text-white font-bold mb-6">Menu</h4>
           <ul class="space-y-4 text-sm text-slate-400">
-            <li><a href="index.html" class="hover:text-indigo-400 transition">Beranda</a></li>
-            <li><a href="index.html#products" class="hover:text-indigo-400 transition">Produk</a></li>
-            <li><a href="order-guide.html" class="hover:text-indigo-400 transition">Cara Order</a></li>
-            <li><a href="contact.html" class="hover:text-indigo-400 transition">Kontak</a></li>
+            <li><a href="/" class="hover:text-indigo-400 transition">Beranda</a></li>
+            <li><a href="/#products" class="hover:text-indigo-400 transition">Produk</a></li>
+            <li><a href="/order-guide.html" class="hover:text-indigo-400 transition">Cara Order</a></li>
+            <li><a href="/contact.html" class="hover:text-indigo-400 transition">Kontak</a></li>
           </ul>
         </div>
         <div>
           <h4 class="text-white font-bold mb-6">Informasi</h4>
           <ul class="space-y-4 text-sm text-slate-400">
-            <li><a href="about-us.html" class="hover:text-indigo-400 transition">Tentang Kami</a></li>
-            <li><a href="privacy-policy.html" class="hover:text-indigo-400 transition">Kebijakan Privasi</a></li>
-            <li><a href="terms-of-service.html" class="hover:text-indigo-400 transition">Syarat & Ketentuan</a></li>
-            <li><a href="disclaimer.html" class="hover:text-indigo-400 transition">Disclaimer</a></li>
+            <li><a href="/about-us.html" class="hover:text-indigo-400 transition">Tentang Kami</a></li>
+            <li><a href="/privacy-policy.html" class="hover:text-indigo-400 transition">Kebijakan Privasi</a></li>
+            <li><a href="/terms-of-service.html" class="hover:text-indigo-400 transition">Syarat & Ketentuan</a></li>
+            <li><a href="/disclaimer.html" class="hover:text-indigo-400 transition">Disclaimer</a></li>
           </ul>
         </div>
       </div>
@@ -463,7 +463,7 @@
   </script>
   <!-- Google Translate & Utils -->
   <div id="google_translate_element" style="display:none;"></div>
-  <script src="utils.js"></script>
+  <script src="/utils.js"></script>
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
@@ -683,7 +683,7 @@
     async function loadProduct() {
       if (!productId && !productSlug) {
         alert("Produk tidak ditemukan");
-        window.location.href = "index.html";
+        window.location.href = "/";
         return;
       }
 
@@ -798,7 +798,7 @@
           document.getElementById("product-container").classList.remove("hidden");
         } else {
           alert("Produk tidak ditemukan di database.");
-          window.location.href = "index.html";
+          window.location.href = "/";
         }
       } catch (error) {
         console.error("Error fetching product:", error);
