--- a/detail-product.html
+++ b/detail-product.html
@@ -250,7 +250,7 @@
         <span class="text-slate-200">Detail Product</span>
       </div>
 
-      <div id="loading" class="grid grid-cols-1 lg:grid-cols-12 gap-10 animate-pulse">
+      <div id="loading-skeleton" class="grid grid-cols-1 lg:grid-cols-12 gap-10 animate-pulse">
         <!-- Left Column Skeleton -->
         <div class="lg:col-span-7 space-y-6">
           <div class="aspect-video w-full rounded-3xl bg-white/5 border border-white/10 skeleton"></div>
@@ -283,7 +283,7 @@
         </div>
       </div>
 
-      <div id="product-container" class="hidden gap-10 lg:grid lg:grid-cols-12">
+      <div id="product-container" class="hidden gap-10 lg:grid-cols-12">
         <!-- Left Column -->
         <div class="lg:col-span-7 space-y-6">
           <div
@@ -840,8 +840,17 @@
             }
           }
 
-          document.getElementById("loading").classList.add("hidden");
-          document.getElementById("product-container").classList.remove("hidden");
+          const loading = document.getElementById("loading-skeleton");
+          if (loading) {
+            console.log("Removing skeleton loader");
+            loading.remove();
+          } else {
+            console.warn("Skeleton loader not found to remove");
+          }
+
+          const container = document.getElementById("product-container");
+          container.classList.remove("hidden");
+          container.classList.add("grid"); // Ensure grid is active
         } else {
           alert("Produk tidak ditemukan di database.");
           window.location.href = "/";
